--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,11 +7,13 @@
 			<h1><a href="">Jeri's First Django Project</a></h1>
 		</div>
 
-		<div>
-			<p>published: March 28th, 2015</p>
-			<h2><a href="">My first post</a></h2>
-			<p>This is my first post! yay!</p>
-		</div>
+		{% for post in posts%}
+			<div>
+				<p>published: {{ post.published_date }}</p>
+				<h1><a href="">{{ post.title }}</a></h1>
+				<p>{{ post.text|linebreaks }}</p>
+			</div>
+		{% endfor %}
 
 		<div>
 			<p>published March 28th, 2015</p>
