--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -10,10 +10,14 @@
 {% csrf_token %}
 <table>
 <tr>
-	<td>{{ form.password.label_tag }}</td>
-	<td>{{ form.password }}</td>
+	<td>{{ form.username.label_tag }}</td>
+	<td>{{ form.username }}</td>
 </tr>
-<table>
+<tr>
+	<td>{{ form.password.label_tag }}</td>
+	<td> {{ form.password }}</td>
+</tr>
+</table>
 
 <input type="submit" value="login" />
 <input type="hidden" name="next" value="{{ next }}" />
