--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -26,5 +26,8 @@
 			 </div>
 		</div>
 	</div>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script type="text/javascript" src="/static/ckeditor/ckeditor/ckeditor.js"></script>
+	<script type="text/javascript" src="/static/ckeditor/ckeditor-init.js"></script>
 </body>
 </html>
